# duplicate_macrotest

./: Cargo.toml  README.md
src/: expand.rs  lib.rs  manifest.rs  path.rs
