[package]
name = "duplicate_macrotest"
version = "1.0.0"
authors = ["Emad Jacob Maroun <emoun.open@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emoun/duplicate_macrotest"
description = "Fork of the macrotest crate specifically to test the duplicate crate"

[dependencies]
diff = "0.1"
glob = "0.3"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
